--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "soundtracker",
   "version": "0.1.0",
+  "homepage": "https://Oxtopus501.github.io/soundtracker",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
@@ -19,7 +20,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint './src/**/*.{js}'",
-    "lint:fix": "eslint './src/**/*.{js}' --fix"
+    "lint:fix": "eslint './src/**/*.{js}' --fix",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -42,6 +45,7 @@
   "devDependencies": {
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "gh-pages": "^4.0.0",
     "prettier": "^2.4.1"
   }
 }
